--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -33,12 +33,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torchvision.models as TM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class LhtFile:\n",
+    "    '''\n",
+    "    capsulate the file name and file path\n",
+    "    '''\n",
+    "    def __init__(self,fileName, filePath):\n",
+    "        self.file_name = fileName\n",
+    "        self.file_path = filePath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class NepalModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.encoder = TM.resnet34(pretrained=True)\n",
+    "        self.fc2 = nn.Linear(1000,2)\n",
+    "    def forward(self,x):\n",
+    "        x = F.relu(self.encoder(x))\n",
+    "        x = torch.sigmoid(self.fc2(x))\n",
+    "        return x"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
