--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -38,6 +38,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "from torch.utils.data import Dataset\n",
     "import torchvision.models as TM"
    ]
   },
@@ -73,6 +74,39 @@
     "        x = F.relu(self.encoder(x))\n",
     "        x = torch.sigmoid(self.fc2(x))\n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class NepalDataset(Dataset):\n",
+    "    def __init__(self, ds, train=True, transform=None):\n",
+    "        data = [i['data'] for i in ds]\n",
+    "        categories = [i['category_id'] for i in ds]\n",
+    "        self.data = data\n",
+    "        self.categories = categories\n",
+    "        self.train = train\n",
+    "        self.transform = transform\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "    def __getitem__(self, idx):\n",
+    "        if torch.is_tensor(idx):\n",
+    "            idx = idx.tolist()\n",
+    "        d = self.data[idx]\n",
+    "        #\n",
+    "        if self.transform:\n",
+    "            d = self.transform(d)\n",
+    "        #\n",
+    "        t = self.categories[idx]\n",
+    "        t = np.array(t,dtype=np.int64)\n",
+    "        t = torch.from_numpy(t)\n",
+    "        rtn = (d,t)\n",
+    "        return rtn\n",
+    "\n"
    ]
   }
  ],
