--- a/01_core_fun.ipynb
+++ b/01_core_fun.ipynb
@@ -372,6 +372,174 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0ecb07d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def Lht_SlideWindow(matrix,xSize, ySize, step):\n",
+    "    rowNum = len(matrix)\n",
+    "    colNum = len(matrix[0])\n",
+    "    rtn = []\n",
+    "    for i in range(0, colNum, step):\n",
+    "        for j in range(0, rowNum, step):\n",
+    "            bbox = [i,j,xSize,ySize]\n",
+    "            rtn.append(bbox)\n",
+    "    return rtn\n",
+    "    pass\n",
+    "\n",
+    "def isInclude(bbox1, bbox2):\n",
+    "    '''\n",
+    "    judge whether bbox1 contains bbox2\n",
+    "    '''\n",
+    "    x1,y1,xs1, ys1 = bbox1\n",
+    "    x2,y2,xs2, ys2 = bbox2\n",
+    "    rtn = x1 <= x2 and y1 <= y2 and x1+xs1 >= x2+xs2 and y1+ys1 >= y2+ys2\n",
+    "    return rtn\n",
+    "\n",
+    "#\n",
+    "def CreateAnnotation(**kwargs):\n",
+    "    '''\n",
+    "    invoke the following functions:\n",
+    "        Lht_SlideWindow, isInclude\n",
+    "    '''\n",
+    "    annotations = []\n",
+    "    root_directory = kwargs['root_directory']\n",
+    "    image = kwargs['image']\n",
+    "    xSize = kwargs['xSize']\n",
+    "    ySize = kwargs['ySize']\n",
+    "    step  = kwargs['step']\n",
+    "    bboxes = kwargs['bboxes']\n",
+    "    #\n",
+    "    image_id = image['id']\n",
+    "    img_file_name = image['file_name']\n",
+    "    img_path = os.path.join(root_directory, img_file_name)\n",
+    "    img = cv2.imread(img_path)\n",
+    "    #\n",
+    "    def fn_contain_yes(sw):\n",
+    "        rtn = []\n",
+    "        for i in bboxes:\n",
+    "            bbox2 = i['bbox']\n",
+    "            a = isInclude(sw, bbox2)\n",
+    "            rtn.append(a)\n",
+    "        return np.any(rtn)\n",
+    "        \n",
+    "    def fn_contain_no(sw):\n",
+    "        rtn = []\n",
+    "        for i in bboxes:\n",
+    "            bbox2 = i['bbox']\n",
+    "            a = isInclude(sw, bbox2)\n",
+    "            rtn.append(not a)\n",
+    "        return np.all(rtn)\n",
+    "        \n",
+    "    #\n",
+    "    sws = Lht_SlideWindow(img, xSize,ySize, step)\n",
+    "    a = filter(fn_contain_yes, sws)\n",
+    "    bboxes_contain_yes = list(a)\n",
+    "    a = filter(fn_contain_no, sws)\n",
+    "    bboxes_contain_no = list(a)\n",
+    "    idx_no = np.random.choice(len(bboxes_contain_no),len(bboxes_contain_yes), replace=False)\n",
+    "    # category_id: 1 -> animal; 0 -> no animal\n",
+    "    for i in bboxes_contain_yes:\n",
+    "        tmp = {'bbox': i, 'image_id':image_id, 'category_id':1}\n",
+    "        annotations.append(tmp)\n",
+    "    #\n",
+    "    for j in idx_no:\n",
+    "        i = bboxes_contain_no[j]\n",
+    "        tmp = {'bbox': i, 'image_id':image_id, 'category_id':0}\n",
+    "        annotations.append(tmp)\n",
+    "    return annotations\n",
+    "    pass\n",
+    "#\n",
+    "def GenerateTrainDateByJson(**kwargs):\n",
+    "    '''\n",
+    "    generate training dataset by json file\n",
+    "    invoke the function: CreateAnnotation\n",
+    "    parameters:\n",
+    "        root_directory\n",
+    "        json: Lht_File object\n",
+    "        xSize: \n",
+    "        ySize:\n",
+    "        step: the sliding length of slide window\n",
+    "        desc: simple description used in tqdm\n",
+    "    '''\n",
+    "    annotations = []\n",
+    "    root_directory = kwargs['root_directory']\n",
+    "    obj_json = kwargs['json']\n",
+    "    xSize = kwargs['xSize']\n",
+    "    ySize = kwargs['ySize']\n",
+    "    step  = kwargs['step']\n",
+    "    desc  = '' if kwargs['desc'] is None else kwargs['desc']\n",
+    "    #\n",
+    "    rtn_images = []\n",
+    "    images = obj_json['images']\n",
+    "    old_annotations = obj_json['annotations']\n",
+    "    categories = [{'id':1, 'name':'animal'}, {'id':0, 'name':'others'}]\n",
+    "    for image in tqdm(images, desc=desc):\n",
+    "        # judge whether there exists a image\n",
+    "        img_file_name = image['file_name']\n",
+    "        img_path = os.path.join(root_directory, img_file_name)\n",
+    "        if not os.path.exists(img_path):\n",
+    "            continue\n",
+    "        # save availabe image to a list\n",
+    "        rtn_images.append(image)\n",
+    "        #\n",
+    "        fun = lambda x: x['image_id']== image['id']\n",
+    "        d = filter(fun, old_annotations)\n",
+    "        d = list(d)\n",
+    "        #\n",
+    "        a = {'image':image, 'xSize':xSize, 'ySize':ySize, 'step':step, 'bboxes':d, 'root_directory': root_directory}\n",
+    "        r = CreateAnnotation(**a)\n",
+    "        annotations += r \n",
+    "    #\n",
+    "    rtn = {'images':rtn_images, 'annotations': annotations, 'categories':categories, 'root':root_directory}\n",
+    "    return rtn\n",
+    "    pass\n",
+    "#\n",
+    "def LhtConstructDSByImageID(image_id, ds):\n",
+    "    annotations = ds['annotations']\n",
+    "    images = ds['images']\n",
+    "    root_directory = ds['root']\n",
+    "    a = filter(lambda x: x['id'] == image_id, images)\n",
+    "    a = list(a)\n",
+    "    image = a[0]\n",
+    "    img_path = os.path.join(root_directory, image['file_name'])\n",
+    "    # read an image, and then convert it to be grayscale\n",
+    "    img = Image.open(img_path)\n",
+    "    #img = ImageOps.grayscale(img)\n",
+    "    img = np.asarray(img)\n",
+    "    #img = np.stack((img,img,img), axis=2)\n",
+    "    #\n",
+    "    ans = filter(lambda x: x['image_id']==image_id, annotations)\n",
+    "    ans = list(ans)\n",
+    "    rtn = []\n",
+    "    for i in ans:\n",
+    "        bbox = np.int32(i['bbox'])\n",
+    "        col,row,colSize, rowSize = bbox\n",
+    "        d = img[row:row+rowSize, col:col+colSize,:]\n",
+    "        f = i['category_id']\n",
+    "        a = {'data':d, 'bbox':bbox, 'category_id': f}\n",
+    "        rtn.append(a)\n",
+    "    #\n",
+    "    return rtn\n",
+    "    pass\n",
+    "#\n",
+    "def LhtGetDataByJson(ds):\n",
+    "    rtn = []   \n",
+    "    images = ds['images']\n",
+    "    for image in tqdm(images,desc=ds['root']):\n",
+    "        image_id = image['id']\n",
+    "        a = LhtConstructDSByImageID(image_id, ds)\n",
+    "        rtn += a\n",
+    "    #\n",
+    "    return rtn\n",
+    "    pass\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2014dc51",
    "metadata": {},
    "outputs": [],
@@ -392,9 +560,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_py37",
+   "display_name": "env_torch",
    "language": "python",
-   "name": "env_py37"
+   "name": "env_torch"
   }
  },
  "nbformat": 4,
