--- a/Test_Model_01.ipynb
+++ b/Test_Model_01.ipynb
@@ -310,9 +310,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_py37",
+   "display_name": "env_torch",
    "language": "python",
-   "name": "env_py37"
+   "name": "env_torch"
   }
  },
  "nbformat": 4,
