--- a/01_core_fun.ipynb
+++ b/01_core_fun.ipynb
@@ -24,7 +24,8 @@
     "import json\n",
     "import numpy as np\n",
     "import shutil\n",
-    "import warnings"
+    "import warnings\n",
+    "from tqdm import tqdm"
    ]
   },
   {
