--- a/01_core_fun.ipynb
+++ b/01_core_fun.ipynb
@@ -25,7 +25,8 @@
     "import numpy as np\n",
     "import shutil\n",
     "import warnings\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import cv2"
    ]
   },
   {
