--- a/01_core_fun.ipynb
+++ b/01_core_fun.ipynb
@@ -542,6 +542,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b40b23a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def save_checkpoint(state, filename='model/my_checkpoint.pth.tar'):\n",
+    "    print('=> Saving checkpoint')\n",
+    "    torch.save(state,filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2014dc51",
    "metadata": {},
    "outputs": [],
